--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
       <div class="header">
         <h2>TODO LIST</h2>
         <input type="text" id="input" placeholder="Type your todo here..." />
-        <button onclick="clickOnButton()" class="addBtn">Add</button>
+        <button onclick="clickOnAddButton()" class="addBtn">Add</button>
       </div>
       <ul id="list"></ul>
     </div>
     <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
-  
